--- a/MembershipListWPF/MembershipListWPF/MainWindow.xaml
+++ b/MembershipListWPF/MembershipListWPF/MainWindow.xaml
@@ -1,8 +1,13 @@
 ﻿<Window x:Class="MembershipListWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Membership Database" Height="350" Width="525" ResizeMode="NoResize">
     <Grid>
-        
+        <Button x:Name="Add" Click="BtnAdd" Content="Add" HorizontalAlignment="Left" Margin="418,81,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="Delete" Click="BtnDelete" Content="Delete" HorizontalAlignment="Left" Margin="418,127,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="Exit"  Click="BtnExit" Content="Exit" HorizontalAlignment="Left" Margin="418,172,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox HorizontalAlignment="Left" Height="175" Margin="44,67,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="344" IsReadOnly="True"/>
+        <Label Content="Customers" HorizontalAlignment="Left" Margin="44,38,0,0" VerticalAlignment="Top" Width="93" />
+
     </Grid>
 </Window>
